MyDevOrg/src/objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result and Screen shots</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Testing Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed &amp; Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Purpose__c</fullName>
        <label>Test Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Feature Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment – Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment – User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression – Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression – User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Steps__c</fullName>
        <label>Test Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>Product_Backlog__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TST{00000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>